Fix realState issues
