# server/docs/swagger.yaml
@@ -118,9 +118,14 @@ definitions:
         x-go-name: Country
       door:
         description: The Door of the real state address
-        example: 2Iz
+        example: Iz
         type: string
         x-go-name: Door
+      floor:
+        description: The Floor of the real state address
+        example: "2"
+        type: string
+        x-go-name: Floor
       gateway:
         description: The gateway of the real state address
         example: 19Bis
@@ -225,7 +230,7 @@ definitions:
     properties:
       sq_meters:
         description: The Size of the real state
-        example: "120"
+        example: "160"
         type: string
         x-go-name: SqMeters
     type: object
